# AODv2

./: .gitignore  .gitmodules  Makefile  README.md  USAGE.md  aodv2.env  aodv2.service  linux_diagnostics.service  pyproject.toml
.github/workflows/: codeql.yml  keepalive.yml
config/: config.yaml
debian/: changelog  control  linux-diagnostics.install  postinst  postrm  prerm  rules
src/: AnomalyWatcher.py  ConfigManager.py  Controller.py  EventDispatcher.py  LogCollector.py  SpaceWatcher.py  aod_entry.py  shared_data.py
src/base/: AnomalyHandlerBase.py  LongCapture.py  QuickAction.py
src/handlers/: CifsstatsQuickAction.py  DebugDataQuickAction.py  DmesgQuickAction.py  ErrorAnomalyHandler.py  JournalctlQuickAction.py  LatencyAnomalyHandler.py  MountsQuickAction.py  SmbinfoQuickAction.py  SockconnAnomalyHandler.py  SysLogsQuickAction.py  TcpdumpCapture.py  TraceCmdCapture.py  latency_anomaly_handler.py
src/utils/: anomaly_type.py  config_schema.py  pdeathsig_wrapper.py  preflight.py  shared_data.py  syslogger.py
tests/: compare.py  conftest.py  csv_range_compare.py  disk_monitor.py  disk_plot.py  manual_capture_drive.py  monitor.py  test_anomaly_watcher.py  test_aod_integration.py  test_base.py  test_config_manager.py  test_controller.py  test_controller_integration.py  test_event_dispatcher.py  test_event_dispatcher_stress.py  test_handlers.py  test_log_collector.py  test_quick_action_handlers.py  test_shared_data.py  test_space_watcher.py  test_space_watcher_soak.py  test_utils.py
tests/c/: Makefile  ringbuf_shim_test.c
tools/: gen_deps.py
(+2 files in other folders)
